overflow fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -316,7 +316,8 @@ nav {
 		}
 	#section_1_video {
 		width: 200%;
-		left: -48%;
+		right: 48%;
+		position: relative;
 	}
 }
  @media screen and (max-width: 460px) {	
